--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  go_router: ^16.2.1
+  flutter_riverpod: ^2.6.1
+  drift: ^2.28.1
+  drift_sqflite: ^2.0.1
+  path_provider: ^2.1.5
+  flutter_secure_storage: ^9.2.4
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
