--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   build_runner: ^2.7.0
   drift_dev: ^2.28.1
   path: ^1.9.1
+  mobile_scanner: ^5.2.3
 
 dev_dependencies:
   flutter_test:
