feat(metrics): interactive charts with fl_chart
- Nutrition calories line charts (7/30d); workouts bar charts

- Tooltips and labels; PRs tab wired

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   mobile_scanner: ^5.2.3
   vibration: ^1.9.0
   flutter_local_notifications: ^17.2.3
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
