--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,6 +71,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: ../resources/GymRat_red.png
+  min_sdk_android: 21
+  remove_alpha_ios: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
