--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   share_plus: ^7.2.1
   file_picker: ^8.0.3
   archive: ^3.4.10
+  flutter_file_dialog: ^3.0.2
 
 dev_dependencies:
   flutter_test:
