feat(about_screen): integrate palette_generator for dynamic theming; enhance About screen with gradient background and improved layout

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_file_dialog: ^3.0.2
   package_info_plus: ^9.0.0
   url_launcher: ^6.3.2
+  palette_generator: ^0.3.3+7
 
 dev_dependencies:
   flutter_test:
